[package]
name = "game_client"
version = "0.1.0"
authors = ["dalaoshe <dalaoshe@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
rand = "0.7.3"
serde = { version = "1.0.97", features = ["derive"] }
serde_bytes = { version = "0.10.5" }
serde_derive = "1.0.104"
bincode = "1.2.1"
chrono = "0.4.10"
